[package]
name = "psynth"
version = "0.0.1"
authors = ["Gordon Hart <gordon.hart2@gmail.com>"]
edition = "2018"
repository = "https://github.com/gordonhart/psynth"
license = "BSD-3-Clause"

[lib]
name = "psynth"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "psynth-play"
path = "src/bin/main.rs"

[features]
hardware = ["embedded-hal", "linux-embedded-hal"]

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
# still quite nascent -- the latest release 0.11.0 doesn't contain some needed
# changes that live unreleased on master
cpal = { git = "https://github.com/RustAudio/cpal" }
hound = "3.4.0"
ringbuf = "0.2.1"
rustyline = "6.0.0"
zmq = "0.9.2"

linux-embedded-hal = { version = "0.3.0", optional = true }
embedded-hal = { version  = "0.2.3", optional = true }
